# taxi_demand_predictor

./: pyproject.toml
data/transformed/: ts_data_2024_01.parquet
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transforme_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb
src/: data.py  data_split.py  paths.py  plot.py
