[project]
name = "taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "AmaN",email = "webdevaman2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "plotly (>=6.0.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "taxi_demand_predictor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
